test/fails/bad_generics/generic_loop.lgl
int f<`t : `t>(int x) {
    return x;
}

void main() {
    print 1;
}